# MultiBBQ

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
data/: README.md  mmbbq_temp_revised.csv
data/construction/: multibbq_template_table_w_face_id.csv  real_world_images.csv
data/gpt_image_gen/: mmbbq_visual_language.csv  mmbbq_visual_language.json  mmbbq_visual_only.csv  mmbbq_visual_only.json  multibbq_visual_language.json  multibbq_visual_only.json
data/imagen4ultra_image_gen/: mmbbq_visual_language.csv  mmbbq_visual_language.json  mmbbq_visual_only.csv  mmbbq_visual_only.json  multibbq_visual_language.csv  multibbq_visual_only.json
data/images_sample/: visual_language_sample.json  visual_only_sample.json
data/templates/: README.md  new_templates_Race_ethnicity_v3.csv  new_templates_Religion_v2.csv
docs/: README.md  RESULTS.md  dataset-construction.md  dataset.md  evaluate-your-own-model.md  experiments.md  extending.md  hf.md  hf_dataset_card.md  hf_perturbations_card.md  hf_results_card.md  installation.md  llm-evaluation.md  metrics.md  models.md  reproducing.md  running.md
docs/benchmark/: RESULTS.md  dataset-construction.md  dataset.md  experiments.md  metrics.md  models.md  reproducing.md
docs/extending/: extending.md  (+2 more)
multibbq/: README.md  __init__.py  __main__.py  cli.py  experiments.py  hf.py  inference.py  utils.py
notebooks/: README.md  gen_images_gpt_image_gen.ipynb  gen_images_imagen4ultra_image_gen.ipynb  gen_realworld.ipynb  gen_template.ipynb  utils.py
scripts/: README.md  build_hf_dataset.py  download_models.sh  eval_aug_img.sh  eval_main.sh  eval_main_context_unmasked.sh  eval_main_context_unmasked_cpu.sh  eval_main_cpu.sh  eval_main_label.sh  eval_quantization.sh  eval_realworld.sh  eval_realworld_cpu.sh  eval_reasoning.sh  eval_reasoning_cpu.sh  eval_temp.sh  eval_unmasked_w_img.sh  eval_unmasked_wo_img.sh  extract_images.py
templates/: README.md  new_templates_Gender_identity.csv  vocabulary.csv
(+36 files in other folders)
